src/test/deca/codegen/valid/SansObjet/Print-UnaryMinus-int.deca
// Description:
//    Printing a unary minus applied to an int variable
//
// Results:
//     -1
//
// Historique:
//    cree le 14/01/2022

{
    int x ;
    x = 1 ;
    print( -x ) ;
}
