src/test/deca/codegen/invalid/SansObjet/Div-Int-ZeroLiteral.deca
// Description:
//    Division of an int by a zero literal
//
// Results:
//     Error: division by zero
//
// Historique:
//    cree le 13/01/2022

{
    int x = 5 / 0;
}
